--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 .home-container {
     text-align: center;
-    background-color: #f0f8ff;
+    background-color: rgb(163, 173, 201);
     padding: 50px;
   }
   
