--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -35,7 +35,7 @@
   margin-top: 2rem;
 }
 
-.module-card {
+.module-card-dashboard {
   width: 160px;
   height: 160px;
   display: flex;
@@ -50,7 +50,7 @@
   cursor: pointer;
 }
 
-.module-card:hover {
+.module-card-dashboard:hover {
   transform: scale(1.05);
 }
 
@@ -59,7 +59,7 @@
 }
 
 .achievements-button {
-  background-color: #7c3aed;
+  background-color: rgb(46, 76, 158);
   color: white;
   font-weight: bold;
   padding: 0.75rem 1.5rem;
@@ -71,7 +71,7 @@
 }
 
 .achievements-button:hover {
-  background-color: #6d28d9;
+  background-color: rgb(115, 150, 245);
 }
 
 /* 🎯 Today’s Missions */
@@ -80,7 +80,7 @@
   top: 100px;
   right: 30px;
   width: 280px;
-  background: #ffffffdd;
+  background: rgb(46, 76, 158);
   padding: 1.5rem;
   border-radius: 20px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
@@ -88,9 +88,9 @@
 }
 
 .mission-title {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   font-weight: bold;
-  color: #3b0764;
+  color: white;
   margin-bottom: 1rem;
 }
 
@@ -156,7 +156,7 @@
 .mission-input button {
   padding: 0.5rem 1rem;
   border-radius: 10px;
-  background-color: #10b981;
+  background-color:rgb(115, 150, 245);
   color: white;
   border: none;
   cursor: pointer;
@@ -180,7 +180,7 @@
 
 
 .fun-fact-box {
-  background: #7c3aed;
+  background: rgb(46, 76, 158);
   color: white;
   padding: 1rem 1.5rem;
   border-radius: 12px;
@@ -193,6 +193,10 @@
   left: 30px;
   width: 280px;
   backdrop-filter: blur(6px);
+}
+
+.fun-fact-box:hover {
+  background-color: rgb(115, 150, 245);
 }
 
 .fun-fact-title {
