--- a/src/pages/ScienceUnitListPage.css
+++ b/src/pages/ScienceUnitListPage.css
@@ -1,6 +1,5 @@
 /* Sayfa arka planı ve ortalama */
 body {
-    background-color: #f9fbfc;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -11,7 +10,10 @@ body {
     margin: 60px auto;
     padding: 20px;
     text-align: center;
+    background-color: rgb(163, 173, 201);
+
   }
+
   
   /* Başlık */
   .science-unit-title {
