--- a/src/pages/ScienceExercisesPage.css
+++ b/src/pages/ScienceExercisesPage.css
@@ -3,6 +3,7 @@
     text-align: center;
     min-height: 100vh;
     background-color: rgb(163, 173, 201);
+    font-family: 'Comic Sans MS', cursive, sans-serif;
   }
   
   .exercises-title {
