--- a/src/pages/ScienceMagnetGamePage.css
+++ b/src/pages/ScienceMagnetGamePage.css
@@ -1,7 +1,7 @@
 .magnet-game {
     text-align: center;
     padding: 2rem;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;;
     background: linear-gradient(to bottom, #f0f9ff, #ffffff);
     min-height: 100vh;
     position: relative;
