--- a/src/pages/WordMatchExercisePage.css
+++ b/src/pages/WordMatchExercisePage.css
@@ -3,7 +3,7 @@
     background: linear-gradient(to bottom right, #fdf4ff, #e0f2fe);
     min-height: 100vh;
     text-align: center;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
   }
   
   .word-match-title {
