--- a/src/pages/EnglishUnitListPage.css
+++ b/src/pages/EnglishUnitListPage.css
@@ -1,7 +1,7 @@
 /* Sayfa arka planı ve ortalama */
 body {
     background-color: rgb(163, 173, 201);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
     margin: 0;
     padding: 0;
   }
