--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -10,7 +10,6 @@
   
   h2 {
     text-align: center;
-    font-family: 'Arial', sans-serif;
     color: #333;
   }
   
@@ -21,7 +20,7 @@
   .input-field {
     width: 100%;
     padding: 12px;
-    margin: 8px 0;
+    margin: 8px 0;  
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 16px;
@@ -32,10 +31,10 @@
     outline: none;
   }
   
-  .submit-btn {
+  .register-submit-btn {
     width: 100%;
     padding: 12px;
-    background-color: #4CAF50;
+    background-color: rgb(46, 76, 158) ;
     color: white;
     border: none;
     border-radius: 5px;
