--- a/src/pages/ScienceUnitListPage.css
+++ b/src/pages/ScienceUnitListPage.css
@@ -1,6 +1,6 @@
 /* Sayfa arka planı ve ortalama */
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;;
     margin: 0;
     padding: 0;
   }
