--- a/src/pages/WordSortingPage.css
+++ b/src/pages/WordSortingPage.css
@@ -3,7 +3,7 @@
 .word-sorting-container {
     padding: 2rem;
     background: linear-gradient(to bottom right, #f0f4ff, #e7f5ff);
-    font-family: 'Comic Sans MS', 'Poppins', sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;;
     text-align: center;
     min-height: 100vh;
   }
