--- a/src/pages/MatchSumActivity.css
+++ b/src/pages/MatchSumActivity.css
@@ -1,8 +1,10 @@
 
+
 .match-container {
   text-align: center;
   padding: 30px;
   font-family: sans-serif;
+  height: 100vh;
 }
 
 select {
@@ -56,6 +58,9 @@ select {
   cursor: grab;
   font-weight: bold;
   user-select: none;
+  -webkit-user-select: none; /* For Safari */
+  -moz-user-select: none;    /* For Firefox */
+  -ms-user-select: none;     /* For older versions of IE */
 }
 
 .matched {
@@ -74,4 +79,18 @@ select {
   justify-content: center;
   gap: 20px;
   margin-bottom: 20px;
+}
+
+.shuffle-button {
+  padding: 10px 20px;
+  margin-top: auto; 
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.shuffle-button:hover {
+  background-color: #45a049;
 }
